<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.5</version>
        <relativePath/>
    </parent>
    <groupId>com.saransh</groupId>
    <artifactId>VidFlowBackend</artifactId>
    <version>1.0</version>
    <name>VidFlow Backend</name>
    <description>VidFlow Backend</description>
    <packaging>pom</packaging>

    <properties>
        <java.version>17</java.version>
        <main-class>com.saransh.vidflowweb.VidFlowWebApplication</main-class>
        <aws.version>2.20.35</aws.version>
        <azure.version>12.21.1</azure.version>
        <java-jwt.version>4.3.0</java-jwt.version>
        <maven.version>3.8.1</maven.version>
    </properties>

    <modules>
        <module>VidFlowData</module>
        <module>VidFlowNetwork</module>
        <module>VidFlowSecurity</module>
        <module>VidFlowService</module>
        <module>VidFlowUtilities</module>
        <module>VidFlowWeb</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${aws.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-storage-blob</artifactId>
                <version>${azure.version}</version>
            </dependency>
            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>${java-jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>${log4j2.version}</version>
                <scope>runtime</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
